# vscode-markdown

./: .editorconfig  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  appveyor.yml  donate.md  language-configuration.json  markdown-all-in-one-0.0.1.vsix  markdown-language-configuration.json  package-lock.json  package.json  package.nl.ru-ru.json  package.nls.ja.json  package.nls.json  package.nls.ru-ru.json  package.nls.zh-cn.json  package.nls.zh-tw.json  roadmap.md  tsconfig.base.json  tsconfig.json  webpack.config.js
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: Bug.md  Feature.md  config.yml
.github/workflows/: main.yml  test.yml
.history/: package_20220808225353.json
data/: words
media/: checkbox.css  fix.css  github.css
src/: IDisposable.ts  completion.ts  extension.ts  formatting.ts  global.d.ts  link.ts  listEditing.ts  localize.ts  markdown-it-plugin-provider.ts  markdownEngine.ts  markdownExtensions.ts  mathEditing.ts  preview.ts  print.ts  syntaxDecorations.ts  tableFormatter.ts  toc.ts  unikeyHandler.ts  util.ts
src/completion/: index.ts  latex.ts
src/configuration/: KnownKey.ts  defaultFallback.ts  fallback.ts  manager.ts  model.ts
src/contextService/: IContextService.ts  contextServiceInFencedCodeBlock.ts  contextServiceInList.ts  contextServiceInMarkdownList.ts  contextServiceInMathEnv.ts  manager.ts
src/contract/: LanguageIdentifier.ts  MarkdownSpec.ts  README.md  SlugifyMode.ts  VisualStudioCodeLocaleId.ts
src/nls/: README.md  index.ts  (+1 more)
src/slug-wasm/: Cargo.toml
src/slug-wasm/src/: lib.rs
src/zola-slug/: .gitignore  Cargo.toml  LICENSE
src/zola-slug/src/: lib.rs
syntaxes/: katex.tmLanguage.json  math_display.markdown.tmLanguage.json  math_display_latex.markdown.tmLanguage.json  math_inline.markdown.tmLanguage.json  math_inline_latex.markdown.tmLanguage.json
test/: formatting.test.ts  index.ts  linksRecognition.test.ts  listEditing.test.ts  tableFormatter.test.ts  testUtils.ts  toc.test.ts
tools/: prepublish.js  set-welcome-message.js
(+39 files in other folders)
